<resources>
    <string name="app_name">GestureID</string>
    <string name="navigation_title_test">Test</string>
    <string name="navigation_title_sensors">Sensors</string>
    <string name="navigation_title_playground_gate">Playground</string>
    <string name="navigation_title_playground">Playground</string>
    <string name="navigation_title_test_begin">Test begin</string>
    <string name="navigation_title_test_click_task">Click task</string>
    <string name="navigation_title_test_swipe_task">Swipe task</string>
    <string name="navigation_title_test_scroll_task">Scroll task</string>
    <string name="navigation_title_test_keyboard_task">Keyboard task</string>
    <string name="navigation_title_test_end">Test end</string>
    <string name="placeholder_sensor_name">Sensor</string>
    <string name="placeholder_sensor_not_found">Sensor was not found</string>
    <string name="placeholder_sensor_status">Status</string>
    <string name="placeholder_sensor_data" translatable="false">XX YY ZZ WW</string>
    <string name="placeholder_sensors_current_time" translatable="false">NNNNNNNNN</string>
    <string name="test_gate_header">Greetings!</string>
    <string name="test_gate_description">As part of participating in the experiment, you need to pass a special test. During the test, data will be collected from motion sensors. No data other than data from the accelerometer, gyroscope and magnetometer will be collected.
        \n\nIf you have already passed the test, please send a file with the data collected during the test to the organizer of the experiment.</string>
    <string name="sensors_time">Time:</string>
    <string name="sensor_info">Sensor info</string>
    <string name="sensor_info_not_available">Sensor info not available</string>
    <string name="sensor_info_name">Name: </string>
    <string name="sensor_info_range">Max range: </string>
    <string name="sensor_info_resolution">Resolution: </string>
    <string name="sensor_info_power">Power: </string>
    <string name="sensor_info_delay">Min delay: </string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_accelerometer_not_available">Accelerometer not available</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_gyroscope_not_available">Gyroscope not available</string>
    <string name="sensor_magnetometer">Magnetometer</string>
    <string name="sensor_magnetometer_not_available">Magnetometer not available</string>
    <string name="sensor_gravity">Gravity</string>
    <string name="sensor_gravity_not_available">Gravity not available</string>
    <string name="sensor_linear_acceleration">Linear Acceleration</string>
    <string name="sensor_linear_acceleration_not_available">Linear Acceleration not available</string>
    <string name="sensor_rotation_vector">Rotation Vector</string>
    <string name="sensor_rotation_vector_not_available">Rotation Vector not available</string>
    <string name="sensor_geo_rotation_vector">Geo Rotation Vector</string>
    <string name="sensor_geo_rotation_vector_not_available">Geomagnetic Rotation Vector not available</string>
    <string name="playground_gate_header">Playground</string>
    <string name="playground_gate_description">The playground is intended for training and testing the authentication system by recording gesture data and their subsequent analysis.\nIn the <b>training</b> mode, gesture data is simply recorded, without additional verification, allowing to quickly create and modify the user model.\nIn the <b>control</b> mode, the system reads the gesture data, analyzes them and, upon successful authentication, modifies the user model.</string>
    <string name="playground_gate_mode_training">Training</string>
    <string name="playground_gate_mode_control">Control</string>
    <string name="playground_gate_mode_enter_button">Enter playground</string>
    <string name="playground_header">Have fun!</string>
    <string name="playground_chip_1">First chip</string>
    <string name="playground_chip_2">Second chip</string>
    <string name="playground_chip_3">Third chip</string>
    <string name="playground_chip_4">Fourth chip</string>
    <string name="playground_chip_5">Fifth chip</string>
    <string name="playground_checkbox_1">First checkbox</string>
    <string name="playground_checkbox_2">Second checkbox</string>
    <string name="playground_checkbox_3">Third checkbox</string>
    <string name="playground_checkbox_4">Fourth checkbox</string>
    <string name="playground_checkbox_5">Fifth checkbox</string>
    <string name="playground_input_hint">Normal input</string>
    <string name="playground_clear_input_hint">Clear input</string>
    <string name="playground_password_input_hint">Password input</string>
    <string name="playground_restricted_input_hint">Restricted input</string>
    <string name="test_begin_header">About test</string>
    <string name="test_begin_description">Thank you for taking the test!
        \n\nYou have to complete a number of simple tasks to interact with a mobile device through interface elements.
        \n\nAs mentioned earlier, while you are taking the test, the application will collect and process information from motion sensors.
        \n\nThanks to the collected and processed information from the sensors of the mobile device, your personal and unique user model will be formed.
        \n\nThe meaning of the experiment is precisely to find out how unique the user models are and what the effectiveness of the authentication method being developed will be.
        \n\nWhile you were reading this text, the system was working and has already begun to form your unique model.
        \n\nHowever, it needs more information, which it will receive while you complete the tasks.
        \n\nCompleting tasks will not take much time, because the average time to complete all tasks takes about 5 minutes.
        \n\n<b>Please note that during the test you need to pass at one time, without switching applications and without turning off the phone!</b> This is due to the fact that your user model changes throughout the all test and will be recorded only at the very end!
        \n\nTo start the test, as well as to move on to subsequent tasks, please click \'next task\' button.</string>
    <string name="test_end_header">The test is completed</string>
    <string name="test_end_description">The last task is to save the test results. Please click on the \'save test results\' button.
        \n\nThe generated model will be saved to a plain text file, for which you can choose the name and folder in which it will be saved. If you have a desire, you can easily get acquainted with the contents of this file.
        \n\nAfter the data is recorded in a file, please send the saved file to the organizers of the experiment.
        \n\nThank you for passing the test!</string>
    <string name="test_next_task_restricted">To proceed to the next task, please finish this task completely!</string>
    <string name="test_click_task_description">In this task, you have to click on the highlighted areas that will appear on the screen. Are you ready?</string>
    <string name="test_swipe_task_description">In this task, you will encounter sliders that you have to set to the desired position.\nAfter all the sliders are set to the desired position, you can move on to the next task.</string>
    <string name="test_swipe_during_task_description">Please set all sliders to the correct positions.\nAfter all the sliders are set to the desired position, you can move on to the next task.</string>
    <string name="test_scroll_task_description">In this task you have to press all the buttons in a certain order.\nHowever, these buttons are quite far from each other, so you will have to swipe a little…\nAfter all the buttons are pressed, you can move on to the next task.</string>
    <string name="test_scroll_during_task_description">Scroll through and click the desired button</string>
    <string name="test_keyboard_task_description">In this task, you will need to click on the balls that appear as quickly as possible.\nImagine that you are working on a keyboard!\nAfter the counter reaches zero, you can move on to another task.</string>
    <string name="test_keyboard_during_task_description">Click on the squares!\nSquares left:</string>
    <string name="test_swipe_task_1">Set slider to the max value</string>
    <string name="test_swipe_task_2">Set slider to the min value</string>
    <string name="test_swipe_task_3">Set slider to the middle</string>
    <string name="test_swipe_task_4">Set sliders to the same values</string>
    <string name="test_swipe_task_5">Set slider from 10% to 20%</string>
    <string name="test_swipe_task_6">Set slider greater than 75%</string>
    <string name="test_swipe_task_7">Set slider lower that 25%</string>
    <string name="test_scroll_button_higher">The button is higher</string>
    <string name="test_scroll_button_lower">The button is lower</string>
    <string name="test_scroll_button_end">The next task button is at the bottom</string>
    <string name="content_description_recording_fab">Stop and continue recording</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_exit">Exit</string>
    <string name="button_leave">Leave</string>
    <string name="button_interrupt">Interrupt</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_authenticate">Authenticate</string>
    <string name="button_next">Next</string>
    <string name="button_try_again">Try again</string>
    <string name="button_home_test_start">Start test</string>
    <string name="playground_radio_button_1">First radio button</string>
    <string name="playground_radio_button_2">Second radio button</string>
    <string name="playground_radio_button_3">Third radio button</string>
    <string name="playground_radio_button_4">Fourth radio button</string>
    <string name="playground_radio_button_5">Fifth radio button</string>
    <string name="playground_toggle_button_left">Left</string>
    <string name="playground_toggle_button_middle">Middle</string>
    <string name="playground_toggle_button_right">Right</string>
    <string name="playground_button_elevated">Elevated button</string>
    <string name="playground_button_filled">Filled button</string>
    <string name="playground_button_filled_tonal">Filled tonal button</string>
    <string name="playground_button_outlined">Outlined button</string>
    <string name="playground_button_text">Text button</string>
    <string name="button_test_start">Start test</string>
    <string name="button_test_end">Save test results</string>
    <string name="button_test_to_home">To the home</string>
    <string name="button_test_next_task">To the next task</string>
    <string name="button_test_start_task">Start task</string>
    <string name="button_test_scroll_click_me_button">Click me!</string>
    <string name="button_test_scroll_wrong_button">I\'m the wrong button</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_leave_playground_title">Leave playground</string>
    <string name="dialog_auth_title">Authentication</string>
    <string name="dialog_auth_failed_title">Access denied</string>
    <string name="dialog_interrupt_test_title">Interrupt test</string>
    <string name="dialog_test_task_description_title">About task</string>
    <string name="dialog_exit_text">Are you sure you want to close the application?</string>
    <string name="dialog_leave_playground_text">Are you sure you want to leave the playground?</string>
    <string name="dialog_auth_text">Are you the owner of this device?</string>
</resources>