<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/sensor_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sensor_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/placeholder_sensor_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sensor_header_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sensor_header_name"
            android:layout_marginTop="@dimen/fragment_margin_vertical_small"
            android:text="@string/placeholder_sensor_status" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sensor_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sensor_header"
        android:layout_marginTop="@dimen/fragment_margin_vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sensor_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_sensor_data" />
    </RelativeLayout>


</RelativeLayout>